# wireguard-telegram-bot

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  users_example.csv
bot/: decorators.py  messages.json  messages.py  telegram_bot.py
wireguard/: __init__.py  wireguard.py
